# opengl-learn

./: .gitignore  CMakeLists.txt
include/Shader/: shader.h
include/glad/: glad.h
src/: glad.c  main.cpp  stb_image.cpp  two.cpp
src/shaders/: frag.glsl
tuts/: box_tex.cpp  gradtri.cpp  quad.cpp  two.cpp
